--- a/002/002.css
+++ b/002/002.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 .frame {
   position: absolute;
   top: 50%;
@@ -51,38 +50,36 @@
 }
 
 .burger-menu {
+  width: 80px;
+  height: 52px;
   cursor: pointer;
 }
 .burger-menu__bar {
-  width: 5rem;
-  height: 0.5rem;
+  width: 100%;
+  height: 8px;
   background: white;
-  position: relative;
-  top: 0;
   border-radius: 0.5rem;
   box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
 }
 .burger-menu .bar-1 {
-  animation: re-animation__bar-1 0.5s linear forwards;
+  animation: re-animation__bar-1 0.7s ease-in-out;
 }
 .burger-menu .bar-2 {
-  margin: 1rem auto;
-  animation: re-animation__bar-2 0.5s linear forwards;
+  margin: 14px 0;
+  animation: re-animation__bar-2 0.7s ease-in-out;
   z-index: 0;
 }
 .burger-menu .bar-3 {
-  position: relative;
-  margin: 1rem auto;
-  animation: re-animation__bar-3 0.5s linear forwards;
+  animation: re-animation__bar-3 0.7s ease-in-out;
 }
 .burger-menu.active .bar-1 {
-  animation: animation__bar-1 0.5s linear forwards;
+  animation: animation__bar-1 0.7s cubic-bezier(0.3, 1, 0.7, 1) forwards;
 }
 .burger-menu.active .bar-2 {
-  animation: animation__bar-2 0.5s linear forwards;
+  animation: animation__bar-2 0.7s cubic-bezier(0.3, 1, 0.7, 1) forwards;
 }
 .burger-menu.active .bar-3 {
-  animation: animation__bar-3 0.5s linear forwards;
+  animation: animation__bar-3 0.7s cubic-bezier(0.3, 1, 0.7, 1) forwards;
 }
 .burger-menu.no-animation div {
   -webkit-animation: none !important;
@@ -91,68 +88,42 @@
 
 @keyframes animation__bar-1 {
   0% {
-    transform: rotate(0deg);
+    transform: translate3d(0, 0, 0) rotate(0deg);
   }
-  30% {
-    top: 1.5rem;
-    transform: rotate(0deg);
-  }
-  70% {
-    top: 1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
   }
   100% {
-    transform: rotate(45deg);
-    top: 1.5rem;
+    transform: translate3d(0, 22px, 0) rotate(45deg);
   }
 }
 @keyframes animation__bar-2 {
   0% {
     opacity: 1;
-    width: 100%;
-  }
-  50% {
-    opacity: 0.5;
-    width: 50%;
-  }
-  70% {
-    opacity: 0;
-    width: 20%;
+    transform: scale(1);
   }
   100% {
     opacity: 0;
-    width: 0%;
+    transform: scale(0);
   }
 }
 @keyframes animation__bar-3 {
   0% {
     transform: rotate(0deg);
   }
-  30% {
-    top: -1.5rem;
-    transform: rotate(0deg);
-  }
-  70% {
-    top: -1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
   }
   100% {
-    transform: rotate(135deg);
-    top: -1.5rem;
+    transform: translate3d(0, -22px, 0) rotate(135deg);
   }
 }
 @keyframes re-animation__bar-1 {
   0% {
-    transform: rotate(45deg);
-    top: 1.5rem;
+    transform: translate3d(0, 22px, 0) rotate(45deg);
   }
-  40% {
-    top: 1.5rem;
-    transform: rotate(0deg);
-  }
-  70% {
-    top: 1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
   }
   100% {
     transform: rotate(0deg);
@@ -161,33 +132,19 @@
 @keyframes re-animation__bar-2 {
   0% {
     opacity: 0;
-    width: 0%;
-  }
-  50% {
-    opacity: 0;
-    width: 20%;
-  }
-  70% {
-    opacity: 0.5;
-    width: 50%;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
-    width: 100%;
+    transform: scale(1);
   }
 }
 @keyframes re-animation__bar-3 {
   0% {
-    transform: rotate(135deg);
-    top: -1.5rem;
+    transform: translate3d(0, -22px, 0) rotate(135deg);
   }
-  40% {
-    top: -1.5rem;
-    transform: rotate(0deg);
-  }
-  70% {
-    top: -1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
   }
   100% {
     transform: rotate(0deg);
