--- a/002/002.scss
+++ b/002/002.scss
@@ -27,9 +27,13 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
-// delete the following line if no text is used
-// edit the line if you wanna use other fonts
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+
+// Variables Menu Icon
+$burger-menu-bar-height: 8px;
+$burger-menu-bar-space: 14px;
+$burger-menu-bar-offsetY: $burger-menu-bar-height + $burger-menu-bar-space;
+$burger-menu-height: (3*$burger-menu-bar-height) + (2*$burger-menu-bar-space);
+$cubic-bezier-in: cubic-bezier(0.30,1,0.70,1);
 
 // use only the available space inside the 400x400 frame
 .frame {
@@ -58,45 +62,43 @@
 }
 
 .burger-menu {
+  width: 80px;
+  height: $burger-menu-height;
   cursor: pointer;
 
   &__bar {
-    width: 5rem;
-    height: 0.5rem;
+    width: 100%;
+    height: $burger-menu-bar-height;
     background: white;
-    position: relative;
-    top: 0;
     border-radius: 0.5rem;
     box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
   }
 
   .bar-1 {
-    animation: re-animation__bar-1 0.5s linear forwards;
+    animation: re-animation__bar-1 0.7s ease-in-out;
   }
 
   .bar-2 {
-    margin: 1rem auto;;
-    animation: re-animation__bar-2 0.5s linear forwards;
+    margin: $burger-menu-bar-space 0;
+    animation: re-animation__bar-2 0.7s ease-in-out;
     z-index: 0;
   }
 
   .bar-3 {
-    position: relative;
-    margin: 1rem auto;
-    animation: re-animation__bar-3 0.5s linear forwards;
+    animation: re-animation__bar-3 0.7s ease-in-out;
   }
 
   &.active {
     .bar-1 {
-      animation: animation__bar-1 0.5s linear forwards;
+      animation: animation__bar-1 0.7s $cubic-bezier-in forwards;
     }
   
     .bar-2 {
-      animation: animation__bar-2 0.5s linear forwards;
+      animation: animation__bar-2 0.7s $cubic-bezier-in forwards;
     }
   
     .bar-3 {
-      animation: animation__bar-3 0.5s linear forwards;
+      animation: animation__bar-3 0.7s $cubic-bezier-in forwards;
     }
   }
 
@@ -108,44 +110,27 @@
 
 @keyframes animation__bar-1 {
   0% {
-    transform: rotate(0deg);
+    transform: translate3d(0, 0, 0) rotate(0deg);
   }
 
-  30% {
-    top: 1.5rem;
-    transform: rotate(0deg);
-  }
-
-  70% {
-    top: 1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, $burger-menu-bar-offsetY, 0) rotate(0deg);
   }
 
   100% {
-    transform: rotate(45deg);
-    top: 1.5rem;
+    transform: translate3d(0, $burger-menu-bar-offsetY, 0) rotate(45deg);
   }
 }
 
 @keyframes animation__bar-2 {
   0% {
     opacity: 1;
-    width: 100%;
-  }
-
-  50% {
-    opacity: 0.5;
-    width: 50%;
-  }
-
-  70% {
-    opacity: 0;
-    width: 20%;
+    transform: scale(1);
   }
 
   100% {
     opacity: 0;
-    width: 0%;
+    transform: scale(0);
   }
 }
 
@@ -154,37 +139,23 @@
     transform: rotate(0deg);
   }
 
-  30% {
-    top: -1.5rem;
-    transform: rotate(0deg);
-  }
-
-  70% {
-    top: -1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, -$burger-menu-bar-offsetY, 0) rotate(0deg);
   }
 
   100% {
-    transform: rotate(135deg);
-    top: -1.5rem;
+    transform: translate3d(0, -$burger-menu-bar-offsetY, 0) rotate(135deg);
   }
 }
 
 
 @keyframes re-animation__bar-1 {
   0% {
-    transform: rotate(45deg);
-    top: 1.5rem;
+    transform: translate3d(0, $burger-menu-bar-offsetY, 0) rotate(45deg);
   }
 
-  40% {
-    top: 1.5rem;
-    transform: rotate(0deg);
-  }
-
-  70% {
-    top: 1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, $burger-menu-bar-offsetY, 0) rotate(0deg);
   }
 
   100% {
@@ -195,39 +166,22 @@
 @keyframes re-animation__bar-2 {
   0% {
     opacity: 0;
-    width: 0%;
-  }
-
-  50% {
-    opacity: 0;
-    width: 20%;
-  }
-
-  70% {
-    opacity: 0.5;
-    width: 50%;
+    transform: scale(0);
   }
 
   100% {
     opacity: 1;
-    width: 100%;
+    transform: scale(1);
   }
 }
 
 @keyframes re-animation__bar-3 {
   0% {
-    transform: rotate(135deg);
-    top: -1.5rem;
+    transform: translate3d(0, -$burger-menu-bar-offsetY, 0) rotate(135deg);
   }
 
-  40% {
-    top: -1.5rem;
-    transform: rotate(0deg);
-  }
-
-  70% {
-    top: -1.5rem;
-    transform: rotate(0deg);
+  50% {
+    transform: translate3d(0, -$burger-menu-bar-offsetY, 0) rotate(0deg);
   }
 
   100% {
