--- a/003/003.scss
+++ b/003/003.scss
@@ -14,7 +14,7 @@
   border-radius: 2px;
 	box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
 	overflow: hidden;
-  background: #fff;
+  background: rgb(51, 51, 51);
   color: #333;
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	-webkit-font-smoothing: antialiased;
@@ -26,4 +26,66 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+
+}
+
+.circle {
+  width: 11rem;
+  height: 11rem;
+  border-radius: 5.5rem;
+  overflow: hidden;
+
+  .background {
+    position: relative;
+    top: -2.2rem;
+  
+    &__sky {
+      height: 7.5rem;
+      background-color: rgb(148, 225, 255);
+    }
+  
+    &__earth {
+      height: 3.5rem;
+      background-color: rgb(216, 197, 114);
+    }
+  }
+  
+  .sun {
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 1.1rem;
+    background: yellow;
+    position: relative;
+    top: 2.5rem;
+    z-index: 999;
+  }
+
+  .mountain {
+    position: absolute;
+    top: 4rem;
+    left: 2rem;
+    border-bottom: 3.5rem solid #a0a0a0;
+    border-left: 3.5rem solid transparent;
+    border-right: 3.7rem solid transparent;
+
+    &__left {
+      position: absolute;
+      top: 0;
+      left: -3.5rem;
+      border-bottom: 3.5rem solid #f7f7f7;
+      border-left: 3.5rem solid transparent;
+      border-right: 1.25rem solid transparent;
+      z-index: 999;
+    }
+
+    &__shadow {
+      position: absolute;
+      top: 7.5rem;
+      left: 2rem;
+      border-bottom: 3.5rem solid #af9f6b;
+      border-left: 3.5rem solid transparent;
+      border-right: 3.7rem solid transparent;
+      transform: rotate(180deg);
+    }
+  }
 }
