feat: 그림 fade in/out하도록 animation 추가
- 속도 조절을 위해 cubic-bezier 속성 사용
- 화면 load되는 시점부터 계속 반복하도록 infinite 속성 추가
- keyframe에 0%, 50%, 100%를 각각 작성하기보다 from, to만 작성하고 alternate로 같은 효과 줌

--- a/003/003.scss
+++ b/003/003.scss
@@ -34,6 +34,7 @@
   height: 11rem;
   border-radius: 5.5rem;
   overflow: hidden;
+  animation: show 3s cubic-bezier(0.15, 0.1, 0.15, 1.0) infinite alternate;
 
   .background {
     position: relative;
@@ -87,5 +88,15 @@
       border-right: 3.7rem solid transparent;
       transform: rotate(180deg);
     }
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
