--- a/003/003.css
+++ b/003/003.css
@@ -29,6 +29,7 @@
   height: 11rem;
   border-radius: 5.5rem;
   overflow: hidden;
+  animation: show 3s cubic-bezier(0.15, 0.1, 0.15, 1) infinite alternate;
 }
 .circle .background {
   position: relative;
@@ -76,6 +77,15 @@
   border-left: 3.5rem solid transparent;
   border-right: 3.7rem solid transparent;
   transform: rotate(180deg);
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=003.css.map */
