feat: 해가 포물선을 그리며 움직이도록 animation 추가
- 포물선을 그리며 움직이도록 하는 방법을 몰라 처음에는 0%부터 100%까지 15~25% 간격으로 위치를 지정해줌
  그렇게해도 부드럽게 움직이지 않아 찾아보니, rotate를 활용하는 방법이 있었음
  rotate는 시작/끝 위치, translate는 원의 크기를 의미
- 해가 포물선을 그리는 중간에 멈췄다가 움직이도록 하고 싶어 animation-timing-function을 활용했으나 실패

--- a/003/003.css
+++ b/003/003.css
@@ -29,7 +29,7 @@
   height: 11rem;
   border-radius: 5.5rem;
   overflow: hidden;
-  animation: show 3s cubic-bezier(0.15, 0.1, 0.15, 1) infinite alternate;
+  animation: show 2s cubic-bezier(0.15, 0.1, 0.15, 1) infinite alternate;
 }
 .circle .background {
   position: relative;
@@ -49,8 +49,10 @@
   border-radius: 1.1rem;
   background: yellow;
   position: relative;
-  top: 2.5rem;
+  top: 8.5rem;
+  left: 4.5rem;
   z-index: 999;
+  animation: moveSun 4s cubic-bezier(0, 0, 1, 1) infinite;
 }
 .circle .mountain {
   position: absolute;
@@ -85,6 +87,18 @@
   }
   to {
     opacity: 1;
+  }
+}
+@keyframes moveSun {
+  0% {
+    transform: rotate(-180deg) translate(8rem) rotate(0deg);
+    animation-timing-function: ease-in-out;
+  }
+  30% {
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: rotate(0deg) translate(8rem) rotate(180deg);
   }
 }
 
