--- a/003/003.css
+++ b/003/003.css
@@ -61,6 +61,7 @@
   border-bottom: 3.5rem solid #a0a0a0;
   border-left: 3.5rem solid transparent;
   border-right: 3.7rem solid transparent;
+  animation: changeMountainColorRight 4s infinite;
 }
 .circle .mountain__left {
   position: absolute;
@@ -70,6 +71,7 @@
   border-left: 3.5rem solid transparent;
   border-right: 1.25rem solid transparent;
   z-index: 999;
+  animation: changeMountainColorLeft 4s infinite;
 }
 .circle .mountain__shadow {
   position: absolute;
@@ -99,6 +101,38 @@
   }
   100% {
     transform: rotate(0deg) translate(8rem) rotate(180deg);
+  }
+}
+@keyframes changeMountainColorLeft {
+  0% {
+    border-bottom: 3.5rem solid #f7f7f7;
+    border-left: 3.5rem solid transparent;
+    border-right: 1.25rem solid transparent;
+    animation-timing-function: ease-in-out;
+  }
+  30% {
+    animation-timing-function: ease-in;
+  }
+  100% {
+    border-bottom: 3.5rem solid #a0a0a0;
+    border-left: 3.5rem solid transparent;
+    border-right: 1.25rem solid transparent;
+  }
+}
+@keyframes changeMountainColorRight {
+  0% {
+    border-bottom: 3.5rem solid #a0a0a0;
+    border-left: 3.5rem solid transparent;
+    border-right: 3.7rem solid transparent;
+    animation-timing-function: ease-in-out;
+  }
+  30% {
+    animation-timing-function: ease-in;
+  }
+  100% {
+    border-bottom: 3.5rem solid #f7f7f7;
+    border-left: 3.5rem solid transparent;
+    border-right: 3.7rem solid transparent;
   }
 }
 
